--- a/index.html
+++ b/index.html
@@ -49,7 +49,58 @@ input,textarea{width:100%;padding:8px;margin:5px 0;border:1px solid #ccc;border-
 
 <script>
 const products=[
-{name:"ساعة رجالية",price:120,img:"https://via.placeholder.com/200"},
+const products = [
+  {
+    name: "لمامة ومكنسة لاسلكية للزوايا الضيقة 2 في 1",
+    price: 140, // ضع السعر المناسب
+    img: "https://github.com/abdosrour20-coder/alsorour-online/blob/main/d2a01034-1829-41fa-8800-97b29ef1707f.jpg?raw=true",
+    description: `
+المميزات: 
+- قوة شفط عالية لتنظيف فعال.
+- تصميم هادئ يقلل الضوضاء أثناء الاستخدام.
+- حجم صغير ووزن خفيف لسهولة النقل.
+- متعددة الاستخدامات تناسب مختلف الأسطح.
+- مزودة بفلتر إسفنجي لمخرج الهواء.
+- نظام ترشيح متطور للحفاظ على نظافة الهواء.
+- خرطوم مرن مع مقبض للتحكم في تدفق الهواء.
+- محرك قوي بقدرة 80 واط لتنظيف أسرع.
+- سعة 600 مل تكفي لجلسات تنظيف طويلة.
+- تعمل على كهرباء 220-240 فولت.
+
+تفاصيل سريعة: 
+- الماركة: KRAWN
+- الضمان: سنتين
+- وكيل الضمان: krawn
+- الموديل: KW-52102
+- مادة التصنيع: بلاستيك
+- الطاقة: 80 واط
+- السعة: 600 مل
+- الجهد الكهربائي: 220-240V
+- اللون: عشوائي
+- جهد الدخل: 12 فولت
+- الشفط: باسكال
+- وقت الشحن: 3-4 ساعات
+- وقت دائم: 30 دقيقة
+- سعة كوب الغبار: 0.7 لتر
+- بلد الصنع: الصين
+- نوع الشفط: جاف فقط
+
+محتويات العبوة:
+- 1 × مكنسة كهربائية محمولة
+- 1 × فلتر إسفنجي
+- 1 × خرطوم مرن
+- 1 × فوهة تنظيف
+
+طريقة الاستخدام:
+- ثبّت الفلتر الإسفنجي داخل المكنسة قبل التشغيل.
+- ركّب الخرطوم أو الفوهة المناسبة حسب نوع السطح.
+- شغّل المكنسة واضبط قوة الشفط عند الحاجة.
+- وجّه الفوهة نحو المكان المراد تنظيفه ببطء.
+- بعد الانتهاء، أوقف التشغيل وافصل الجهاز عن الكهرباء.
+`
+  },
+  // المنتجات الأخرى كما كانت
+];
 {name:"عطر رجالي",price:150,img:"https://via.placeholder.com/200"},
 {name:"سماعة بلوتوث",price:90,img:"https://via.placeholder.com/200"},
 {name:"نظارة شمس",price:70,img:"https://via.placeholder.com/200"}
@@ -111,7 +162,7 @@ total+=c.price;
 });
 msg+="الإجمالي: "+total+" ريال";
 
-let whatsappNumber="966XXXXXXXXX"; // ضع رقمك هنا بدون +
+let whatsappNumber="201108731705"; // ضع رقمك هنا بدون +
 window.open("https://wa.me/"+whatsappNumber+"?text="+msg,"_blank");
 }
 </script>
