--- a/index.html
+++ b/index.html
@@ -73,16 +73,41 @@ cart.push(products[i]);
 renderCart();
 }
 
-function renderCart(){
-let html=""; let total=0;
-cart.forEach((c, idx) => {
-  total += c.price;
-  html += `<div class="cart-item">
-    <span>${c.name}</span>
-    <span>${c.price} ريال</span>
-    <span style="cursor:pointer;" onclick="removeFromCart(${idx})">🗑️</span>
-  </div>`;
-});
+function renderCart() {
+  let html = "";
+  let total = 0;
+
+  cart.forEach((c, idx) => {
+    total += c.price;
+
+    // HTML للسلة مع أيقونة حذف
+    html += `
+      <div class="cart-item">
+        <span>${c.name}</span>
+        <span>${c.price} ريال</span>
+        <span class="remove-item" data-index="${idx}" style="cursor:pointer;">🗑️</span>
+      </div>
+    `;
+  });
+
+  document.getElementById("cartItems").innerHTML = html;
+  document.getElementById("totalPrice").innerText = "الإجمالي: " + total + " ريال";
+
+  // ربط حدث الحذف لكل زر بعد إنشاء العناصر
+  const removeButtons = document.querySelectorAll(".remove-item");
+  removeButtons.forEach(btn => {
+    btn.addEventListener("click", () => {
+      const index = btn.getAttribute("data-index");
+      removeFromCart(index);
+    });
+  });
+}
+
+// دالة الحذف
+function removeFromCart(index) {
+  cart.splice(index, 1); // حذف العنصر من المصفوفة
+  renderCart();           // إعادة عرض السلة بعد الحذف
+}
 document.getElementById("cartItems").innerHTML=html;
 document.getElementById("totalPrice").innerText="الإجمالي: "+total+" ريال";
 }
